--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,13 +19,27 @@
     --main-blue-color:#636DAE;
     --main-gray-blue-color:#D2D6E9;
     --main-gray-color:#8E8F93;
+    --main-yellow-color:#FEC526;
+    --main-dark-gray-color:#3D3D3E;
 
     --main-font-size-titles:38px;
     --main-font-size-parrafos:18px;
     --main-font-size-parrafos-pequeños:13px;
+    --main-font-size-subtitulos:30px;
 
     --main-font-family-regular:'Regular';
     --main-font-family-bold:'Bold';
+
+    --main-margin-table-contents:1em;
+    --main-height-table:800px;
+}
+
+ul{
+    list-style: none;
+}
+
+.selected{
+    color: var(--main-blue-color) !important;
 }
 
 .main-container{
@@ -33,13 +47,18 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
     min-height: 100%;
     min-width: 100%;
-    background-image: url('../img/background-home.jpg');
-    background-size: cover;
-    background-position: center;
+}
+
+.login-container{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .login{
@@ -122,4 +141,354 @@
     text-align: center;
     height: 45px;
     padding: 0 !important;
+    cursor: pointer;
+}
+
+/* MENU */
+
+.menu-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.menu-container ul{
+    display: flex;
+    flex-direction: row;
+    padding: 3em 5em 3em 5em;
+}
+
+#logo-roche{
+    width: 150px;
+}
+
+#logo-ocrevus{
+    width: 250px;
+    margin-right: 4em;
+}
+
+#menu-links li{
+    margin: 0 2em 0 2em;
+}
+
+#menu-links li a{
+    font-family: var(--main-font-family-bold);
+    font-size: var(--main-font-size-parrafos);
+    text-decoration: none;
+    color: var(--main-white-color);
+}
+
+.general-body{
+    background-image: url('../img/background-main.jpg');
+    background-size: 200%;
+    background-repeat: repeat;
+    background-position: top;
+}
+
+.bottom-logos-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    position: absolute;
+    bottom: 0;
+    padding: 2em 4em 2em 4em;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.footer-container{
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    background-color: var(--main-white-color);
+    padding: 2.5rem 0 2.5rem 0;
+    margin-top: 3rem;
+}
+
+.footer-container h2{
+    text-align: center;
+    font-family: var(--main-font-family-bold);
+    font-size: var(--main-font-size-titles);
+    color: var(--main-blue-color);
+}
+
+.footer-container ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-container ul li img{
+    margin: 1em;
+}
+
+
+/* GAME SECTION */
+
+.game-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+    margin: auto;
+}
+
+
+
+/* SLIDER */
+
+.slideshow-banner{
+    width: 100%;
+    display: block;
+    margin: 2rem 0 2rem 0;
+    overflow: hidden;
+}
+
+.slideshow-banner ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    width: 400%;
+}
+
+.slideshow-banner ul li{
+    animation: banner-slider 40s infinite alternate linear;
+}
+
+.slideshow-banner ul li img{
+    display: block;
+    width: 100%;
+}
+
+@keyframes banner-slider{
+
+    0%{
+        transform: translateX(0%);
+    }
+
+    10%{
+        transform: translateX(0%);
+    }
+
+    20%{
+        transform: translateX(-100%);
+    }
+
+    30%{
+        transform: translateX(-100%);
+    }
+
+    40%{
+        transform: translateX(-200%);
+    }
+
+    50%{
+        transform: translateX(-200%);
+    }
+
+    60%{
+        transform: translateX(-300%);
+    }
+
+    75%{
+        transform: translateX(-300%);
+    }
+
+    100%{
+        transform: translateX(-300%);
+    }
+}
+
+/* VIDEO SECTION */
+
+.video-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+    margin: 5rem auto 5rem auto;
+}
+
+.video-container iframe{
+    width: 800px;
+    height: 450px;
+    margin-right: 7rem;
+}
+
+.video-container h2{
+    color: var(--main-blue-color);
+    font-family: var(--main-font-family-bold);
+    font-size: var(--main-font-size-titles);
+}
+
+
+/* TABLA DE TIEMPOS */
+
+.time-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: flex-start;
+    margin: auto;
+    width: 70%;
+    height: var(--main-height-table);
+}
+
+.first-time-container{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    width: 70%;
+    margin: 1rem;
+    height: var(--main-height-table);
+}
+
+.second-time-container{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    width: 30%;
+    height: var(--main-height-table);
+    margin: 1rem;
+}
+
+.table-time-container{
+    background-color: var(--main-white-color);
+    width: 100%;
+    max-height: 100%;
+    overflow: scroll;
+    display: flex;
+    justify-content: center;
+    border: 10px solid var(--main-blue-color);
+    margin: var(--main-margin-table-contents);
+}
+
+.table-time-container table{
+    justify-content: space-between;
+    width: 100%;
+    padding: 1em;
+}
+
+
+.title-time-container{
+    background-color: var(--main-blue-color);
+    width: 100%;
+    padding: 2em 0 2em 0;
+}
+
+.title-time-container h2{
+    color: var(--main-white-color);
+    font-size: var(--main-font-size-titles);
+    font-family: var(--main-font-family-bold);
+    text-align: center;
+}
+
+.table-time-container table{
+    border-spacing: 0;
+
+}
+
+
+.table-time-container table thead{
+    background-color:var(--main-yellow-color);
+}
+
+.table-time-container table thead th{
+    text-align: left;
+    padding: 1em 2em 1em 2em;
+    color: var(--main-blue-color);
+    font-size: var(--main-font-size-parrafos);
+    font-family: var(--main-font-family-regular);
+}
+
+.table-time-container table tbody td{
+    padding: 2em;
+    text-align: left;
+    border-bottom: 1px solid var(--main-gray-color);
+    font-family: var(--main-font-family-regular);
+    color: #000;
+    font-size: var(--main-font-size-parrafos);
+}
+
+#comment{
+    text-align: center;
+    margin-top: 2em;
+    font-family: var(--main-font-family-regular);
+    font-size: var(--main-font-size-parrafos-pequeños);
+    color: var(--main-dark-gray-color);
+}
+
+.img-time-container{
+    width: 100%;
+    background-color: var(--main-white-color);
+    height: 50%;
+    padding: 1em;
+}
+
+.img-time-mask{
+    width: 100%;
+    height: 80%;
+    background-color: var(--main-blue-color);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-time-mask img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.img-time-container h2{
+    text-align: center;
+    color: var(--main-blue-color);
+    font-family: var(--main-font-family-bold);
+    font-size: var(--main-font-size-subtitulos);
+    margin:1em 0 .5em 0;
+}
+
+.info-time-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: var(--main-margin-table-contents);
+    background-color: var(--main-blue-color);
+    height: 100%;
+    width: 100%;
+    padding: 1.5em;
+}
+
+.info-time-container h2{
+    color: var(--main-white-color);
+    font-family: var(--main-font-family-bold);
+    text-align: left;
+    line-height: 2;
+    margin-top: 3rem;
+}
+
+.info-time-container p{
+    font-family: var(--main-font-family-regular);
+    font-size: var(--main-font-size-parrafos);
+    align-self: end;
+    color: var(--main-white-color);
 }
