--- a/public/css/main.css
+++ b/public/css/main.css
@@ -492,3 +492,42 @@ ul{
     align-self: end;
     color: var(--main-white-color);
 }
+
+
+/* GIFS CONTENT */
+
+.main-em-container{
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    margin: 3em auto 3em auto;
+}
+
+.main-em-container h2{
+    color: var(--main-blue-color);
+    font-family: var(--main-font-family-bold);
+    font-size: var(--main-font-size-titles);
+    align-self: flex-start;
+}
+
+.gifs-container{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.gifs-container img{
+    width: 400px;
+    margin: 2em 0 2em 0;
+}
+
+.gifs-container img:last-child{
+    object-fit: cover;
+    height: 100%;
+    align-self: center;
+}
